<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray100"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/hotel_special_and_etp_margin"
            android:layout_weight="1"
            android:fillViewport="true"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.expedia.bookings.widget.TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/etp_payment_options_text"
                        android:textColor="@color/default_text_color"
                        app:textStyle="medium" />

                    <com.expedia.bookings.widget.TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="15dp"
                        android:drawableLeft="@drawable/ic_etp_overview_checkmark"
                        android:drawablePadding="8dp"
                        android:text="@string/etp_pay_now_option_text"
                        android:textColor="@color/etp_text_color"
                        android:textSize="16sp"
                        app:textStyle="medium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <include layout="@layout/include_etp_bullet" />

                        <com.expedia.bookings.widget.TextView
                            android:id="@+id/etp_pay_now_charges_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_text_color"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <include layout="@layout/include_etp_bullet" />

                        <com.expedia.bookings.widget.TextView
                            android:id="@+id/etp_pay_now_currency_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_text_color"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <include layout="@layout/include_etp_bullet" />

                        <com.expedia.bookings.widget.TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/etp_pay_now_cancellation_text"
                            android:textColor="@color/light_text_color"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/earn_text_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="16dp"
                            android:paddingRight="4dp"
                            android:text="@string/bullet_point"
                            android:textColor="@color/pay_now_earn_text_color" />

                        <com.expedia.bookings.widget.TextView
                            android:id="@+id/etp_earn_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/pay_now_earn_text_color" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pay_later_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.expedia.bookings.widget.TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="15dp"
                        android:drawableLeft="@drawable/ic_etp_overview_checkmark"
                        android:drawablePadding="8dp"
                        android:text="@string/etp_pay_later_option_text"
                        android:textColor="@color/etp_text_color"
                        android:textSize="16sp"
                        app:textStyle="medium" />

                    <LinearLayout
                        android:id="@+id/deposit_terms_first_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="2dp"
                        android:visibility="gone">

                        <include layout="@layout/include_etp_bullet" />

                        <com.expedia.bookings.widget.TextView
                            android:id="@+id/deposit_terms_first_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_text_color"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/deposit_terms_second_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="2dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="2dp">

                        <include layout="@layout/include_etp_bullet" />

                        <com.expedia.bookings.widget.TextView
                            android:id="@+id/deposit_terms_second_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_text_color"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/deposit_exceed_info_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="2dp"
                        android:visibility="gone">

                        <include layout="@layout/include_etp_bullet" />

                        <com.expedia.bookings.widget.TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/etp_pay_later_deposit_text"
                            android:textColor="@color/light_text_color"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <include layout="@layout/include_etp_bullet" />

                        <com.expedia.bookings.widget.TextView
                            android:id="@+id/etp_pay_later_currency_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_text_color"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <include layout="@layout/include_etp_bullet" />

                        <com.expedia.bookings.widget.TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/etp_pay_later_cancellation_text"
                            android:textColor="@color/light_text_color"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/pay_later_payment_info_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="2dp"
                        android:visibility="gone">

                        <include layout="@layout/include_etp_bullet" />

                        <com.expedia.bookings.widget.TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/etp_pay_later_payment_info_text"
                            android:textColor="@color/light_text_color"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <include layout="@layout/include_etp_bullet" />

                        <com.expedia.bookings.widget.TextView
                            android:id="@+id/no_charges_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_text_color"/>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="?attr/primary_color"
            android:minHeight="?attr/actionBarSize"
            app:navigationContentDescription="@string/toolbar_nav_icon_close_cont_desc"
            app:navigationIcon="@drawable/ic_close_white_24dp"
            app:title="@string/book_now_pay_later"
            app:titleTextAppearance="@style/ToolbarTitleTextAppearance"
            app:contentInsetStartWithNavigation="0dp" />

        <View
            android:id="@+id/toolbar_dropshadow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_dropshadow_height"
            android:background="@drawable/tb_shadow" />

    </LinearLayout>

</merge>
