...
                android:textSize="@dimen/tablet_result_row_secondary_text_size"
                android:visibility="gone"
                app:textStyle="light" />
        </LinearLayout>

        <com.expedia.bookings.widget.TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="#ffffff"
            android:textSize="@dimen/tablet_result_row_price_size"
            app:textStyle="bold" />
...
