...
                            android:contentDescription="@string/children_age_label_cont_desc"
                            android:textColor="@color/traveler_picker_secondary_text"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/children_plus"
                        style="@style/TravelerIcon.Plus"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/add_child_traveler_cont_desc"/>
                </LinearLayout>

                <com.expedia.bookings.widget.TextView
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/child_spinner_1"
                            style="@style/SelectTravelerAgeSpinner" />

                        <Spinner
                            android:id="@+id/child_spinner_2"
                            style="@style/SelectTravelerAgeSpinner" />

...
