...

        <TextView
            style="@style/TextAppearance.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/select_a_room_instruction" />
    </LinearLayout>

    <!-- Hotel Notices : Resort fees, Renovation notices, etc? -->

    <LinearLayout
        android:id="@+id/hotel_notice_container"
...
