...
                android:layout_marginTop="9dp"
                android:background="@drawable/card_background">

            </FrameLayout>

            <com.expedia.bookings.widget.AccountButton
                android:id="@+id/login_widget"
                style="?attr/checkout_card_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:orientation="vertical" />
...
